@@ -11,6 +11,8 @@ version 0.9.0 - XX-MMM-2009
  . Sprite: AtlasSpriteManager renamed to SpriteSheet (issue #620)
  . Sprite: Sprite Frames and animations supports flipx / flipy (issue #620)
  . SpriteFrameCache: added an easier way to create animations and sprites (issue #620)
+ . Templates: updated (part of issue #520 and issue #620)
+ . Templates: includes cocos2d and CocosDenshion licences files
  . TextureMgr: renamed to TextureCache (part of issue #620)
  . XCode: textures files in 1 xcode group (Texture2d, PVRTexture, TextureAltas, TextureCache)
 
